@@ -3210,78 +3210,80 @@ channelsnames[6010]="Brazzers TV";
 channels[6010]="S19.2E-53-1119-12882";
 channelsnames[6011]="Hustler TV";
 channels[6011]="S19.2E-53-1119-12883";
-channelsnames[6012]="FRENCH LOVER";
-channels[6012]="S19.2E-1-1018-6407";
-channelsnames[6013]="LIBIDO TV";
-channels[6013]="S19.2E-1-1018-6402";
-channelsnames[6014]="BRAZZERS TV Europe";
-channels[6014]="S13.0E-318-12200-7461";
-channelsnames[6015]="PRIVATE TV";
-channels[6015]="S13.0E-318-13300-4960";
-channelsnames[6016]="FL TV";
-channels[6016]="S13.0E-318-15400-13512";
+channelsnames[6012]="FRENCH LOVER HD";
+channels[6012]="S19.2E-1-1024-8501";
+channelsnames[6013]="LIBIDO TV HD";
+channels[6013]="S19.2E-1-1024-8504";
+channelsnames[6014]="PINK X HD";
+channels[6014]="S19.2E-1-1024-8508";
+channelsnames[6015]="BRAZZERS TV Europe";
+channels[6015]="S13.0E-318-12200-7461";
+channelsnames[6016]="PRIVATE TV";
+channels[6016]="S13.0E-318-13300-4960";
 channelsnames[6017]="Venus";
 channels[6017]="S30.0W-83-102-213";
 channelsnames[6018]="Leo TV";
 channels[6018]="S23.5E-3-3219-13142";
 channelsnames[6019]="Vivid";
 channels[6019]="S19.2E-53-1105-4064";
-channelsnames[6020]="Vivid CZ";
-channels[6020]="S19.2E-53-1105-4065";
-channelsnames[6021]="Dorcel TV";
-channels[6021]="S19.2E-1-1094-17029";
-channelsnames[6022]="XXL";
-channels[6022]="S19.2E-1-1094-17054";
-channelsnames[6023]="Dorcel TV";
-channels[6023]="S19.2E-1-1094-17059";
-channelsnames[6024]="DORCEL XXX";
-channels[6024]="S19.2E-1-1096-8613";
-channelsnames[6025]="Hustler TV CZ";
-channels[6025]="S19.2E-53-1119-12884";
-channelsnames[6026]="XXL";
-channels[6026]="S13.0E-319-9900-468";
-channelsnames[6027]="SCT HD";
-channels[6027]="S13.0E-318-5000-10";
-channelsnames[6028]="Redlight HD";
-channels[6028]="S13.0E-318-15800-16932";
-channelsnames[6029]="Daring tv! 133";
-channels[6029]="S13.0E-318-13300-4961";
-channelsnames[6030]="EROXXX";
-channels[6030]="S23.5E-3-3212-14055";
-channelsnames[6031]="Brazzers TV";
-channels[6031]="S23.5E-3-3221-5061";
-channelsnames[6032]="Hustler HD";
-channels[6032]="S13.0E-318-15800-16933";
-channelsnames[6033]="Penthouse";
-channels[6033]="S23.5E-3-3222-20917";
-channelsnames[6034]="Penthouse CZ";
-channels[6034]="S23.5E-3-3222-20957";
-channelsnames[6035]="PENTHOUSE HD";
-channels[6035]="S19.2E-1-1086-9907";
-channelsnames[6036]="PLAYBOY TV";
-channels[6036]="S19.2E-1-1060-30603";
-channelsnames[6037]="Brazzers TV CZ";
-channels[6037]="S23.5E-3-3221-5069";
-channelsnames[6038]="Beate-Uhse.TV,BeateU";
-channels[6038]="S19.2E-133-17-21";
-channelsnames[6039]="Hustler HD";
-channels[6039]="S23.5E-3-3211-20830";
-channelsnames[6040]="Hustler HD CZ";
-channels[6040]="S23.5E-3-3211-20831";
-channelsnames[6041]="Redlight HD!";
-channels[6041]="S13.0E-318-15800-16943";
-channelsnames[6042]="Hustler HD!";
-channels[6042]="S13.0E-318-15800-16944";
-channelsnames[6043]="XXL PL";
-channels[6043]="S13.0E-319-9900-469";
-channelsnames[6044]="Penthouse HD";
-channels[6044]="S23.5E-3-3236-5711";
-channelsnames[6045]="Penthouse HD1";
-channels[6045]="S23.5E-3-3236-5712";
-channelsnames[6046]="Penthouse HD2";
-channels[6046]="S23.5E-3-3236-5713";
-channelsnames[6047]="Penthouse 3D";
-channels[6047]="S23.5E-3-3204-5311";
+channelsnames[6020]="FL TV";
+channels[6020]="S13.0E-318-15400-13512";
+channelsnames[6021]="Vivid CZ";
+channels[6021]="S19.2E-53-1105-4065";
+channelsnames[6022]="Dorcel TV";
+channels[6022]="S19.2E-1-1094-17029";
+channelsnames[6023]="XXL";
+channels[6023]="S19.2E-1-1094-17054";
+channelsnames[6024]="Dorcel TV";
+channels[6024]="S19.2E-1-1094-17059";
+channelsnames[6025]="DORCEL XXX";
+channels[6025]="S19.2E-1-1096-8613";
+channelsnames[6026]="Hustler TV CZ";
+channels[6026]="S19.2E-53-1119-12884";
+channelsnames[6027]="XXL";
+channels[6027]="S13.0E-319-9900-468";
+channelsnames[6028]="SCT HD";
+channels[6028]="S13.0E-318-5000-10";
+channelsnames[6029]="Redlight HD";
+channels[6029]="S13.0E-318-15800-16932";
+channelsnames[6030]="Daring tv! 133";
+channels[6030]="S13.0E-318-13300-4961";
+channelsnames[6031]="EROXXX";
+channels[6031]="S23.5E-3-3212-14055";
+channelsnames[6032]="Brazzers TV";
+channels[6032]="S23.5E-3-3221-5061";
+channelsnames[6033]="Hustler HD";
+channels[6033]="S13.0E-318-15800-16933";
+channelsnames[6034]="Penthouse";
+channels[6034]="S23.5E-3-3222-20917";
+channelsnames[6035]="Penthouse CZ";
+channels[6035]="S23.5E-3-3222-20957";
+channelsnames[6036]="PENTHOUSE HD";
+channels[6036]="S19.2E-1-1086-9907";
+channelsnames[6037]="PLAYBOY TV";
+channels[6037]="S19.2E-1-1060-30603";
+channelsnames[6038]="Brazzers TV CZ";
+channels[6038]="S23.5E-3-3221-5069";
+channelsnames[6039]="Beate-Uhse.TV,BeateU";
+channels[6039]="S19.2E-133-17-21";
+channelsnames[6040]="Hustler HD";
+channels[6040]="S23.5E-3-3211-20830";
+channelsnames[6041]="Hustler HD CZ";
+channels[6041]="S23.5E-3-3211-20831";
+channelsnames[6042]="Redlight HD!";
+channels[6042]="S13.0E-318-15800-16943";
+channelsnames[6043]="Hustler HD!";
+channels[6043]="S13.0E-318-15800-16944";
+channelsnames[6044]="XXL PL";
+channels[6044]="S13.0E-319-9900-469";
+channelsnames[6045]="Penthouse HD";
+channels[6045]="S23.5E-3-3236-5711";
+channelsnames[6046]="Penthouse HD1";
+channels[6046]="S23.5E-3-3236-5712";
+channelsnames[6047]="Penthouse HD2";
+channels[6047]="S23.5E-3-3236-5713";
+channelsnames[6048]="Penthouse 3D";
+channels[6048]="S23.5E-3-3204-5311";
 channelsnames[8001]="NPO 1";
 channels[8001]="T-8720-2214-1101";
 channelsnames[8002]="NPO 2";
@@ -3539,7 +3541,7 @@ minChan[5] = 5001;
 maxChan[5] = 5100;
 baseChn[5] = 5000;
 minChan[6] = 6001;
-maxChan[6] = 6047;
+maxChan[6] = 6048;
 baseChn[6] = 6000;
 minChan[8] = 8001;
 maxChan[8] = 8059;
@@ -3558,4 +3560,4 @@ defChan[6] = minChan[6]; protChn[6] = 1;
 defChan[7] = minChan[7]; protChn[7] = 0;
 defChan[8] = minChan[8]; protChn[8] = 0;
 defChan[9] = minChan[9]; protChn[9] = 0;
-Chan_Ver = "07/26/15 10:45:06" ;
+Chan_Ver = "08/11/15 18:11:30" ;
